# Rust-AI-programmer

./: .editorconfig  .gitignore  CODEOWNERS  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP.md  SECURITY.md  STRAND_QUICKSTART.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  pages.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/vscode-extension/: README.md
configs/: default.toml
configs/profiles/: ci.toml  dev.toml
crates/bytecore/: Cargo.toml
crates/bytecore/src/: lib.rs
crates/cargo-client/: Cargo.toml
crates/cargo-client/src/: lib.rs
crates/datasets/: Cargo.toml
crates/datasets/src/: lib.rs
crates/eval-core/: Cargo.toml
crates/eval-core/src/: lib.rs
crates/eval-harness/: Cargo.toml
crates/eval-harness/src/: main.rs
crates/gui/: Cargo.toml
crates/gui-core/: Cargo.toml
crates/gui-core/src/: lib.rs
crates/gui/src/: main.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/model-core/: Cargo.toml
crates/model-heads/: Cargo.toml
crates/orchestrator/: Cargo.toml
crates/patch/: Cargo.toml
crates/patch-engine/: Cargo.toml
crates/plugin-abi/: Cargo.toml
crates/plugin-host/: Cargo.toml
crates/plugin-sdk/: Cargo.toml
crates/policy/: Cargo.toml
crates/protocol/: Cargo.toml
crates/quant/: Cargo.toml
crates/ra-client/: Cargo.toml
crates/rusta-brain/byte-lm/: Cargo.toml
crates/rusta-brain/byte-lm/src/: attention.rs  config.rs  lib.rs  loader.rs  model.rs
crates/rusta-capkit/: Cargo.toml
crates/rusta-cli/: Cargo.toml
crates/rusta-common/: Cargo.toml
crates/rusta-conductor/: Cargo.toml
crates/rusta-datasets/: Cargo.toml
crates/rusta-devlog/: Cargo.toml
crates/rusta-eval/: Cargo.toml
crates/rusta-graph/: Cargo.toml
crates/rusta-kits/: Cargo.toml
crates/rusta-model/: Cargo.toml
crates/rusta-provenance/: Cargo.toml
crates/rusta-senses/: .gitignore  Cargo.toml  README.md
crates/rusta-senses/crates/rusta-ingest/ingest-fixtures/: Cargo.toml
crates/rusta-senses/crates/rusta-ingest/ingest-fixtures/src/: lib.rs
crates/rusta-senses/crates/rusta-ingest/rusta-ingest-core/: Cargo.toml
crates/rusta-senses/crates/rusta-ingest/rusta-ingest-core/src/: lib.rs
crates/rusta-senses/crates/rusta-ingest/rusta-ingest-net/: Cargo.toml
crates/rusta-senses/crates/rusta-ingest/rusta-ingest-net/src/: lib.rs
crates/rusta-senses/crates/rusta-ingest/rusta-ingest-std/: Cargo.toml
crates/rusta-senses/crates/rusta-ingest/rusta-ingest-std/src/: lib.rs
crates/rusta-senses/crates/rusta-sense/: Cargo.toml
crates/rusta-senses/crates/rusta-sense/src/: lib.rs  main.rs
crates/rusta-senses/crates/sense-adapters/audio/: Cargo.toml
crates/rusta-senses/crates/sense-adapters/binary/: Cargo.toml
crates/rusta-senses/crates/sense-adapters/text/: Cargo.toml
crates/rusta-senses/crates/sense-adapters/vision/: Cargo.toml
crates/rusta-senses/crates/sense-cli/: Cargo.toml
crates/rusta-senses/crates/sense-cli/src/: main.rs
crates/rusta-senses/crates/sense-core/: Cargo.toml
crates/rusta-senses/crates/sense-core/src/: adapter.rs  byteframe.rs  bytes.rs  config.rs  constants.rs  determinism.rs  error.rs  evidence.rs  ffi.rs  frame.rs  lib.rs  prelude.rs  registry.rs  senseout.rs  sidecar.rs  status.rs  trace.rs  validators.rs
crates/rusta-senses/crates/sense-core/src/traits/: adapter.rs  detector.rs
crates/rusta-senses/crates/sense-detector/: Cargo.toml
crates/rusta-senses/crates/sense-detector/src/: lib.rs
crates/rusta-senses/crates/sense-flow/: Cargo.toml
crates/rusta-senses/crates/sense-goldenkit/: Cargo.toml
crates/rusta-senses/crates/sense-metrics/: Cargo.toml
crates/rusta-senses/crates/sense-transforms/: Cargo.toml
crates/rusta-senses/crates/sense-wasm/: Cargo.toml
crates/rusta-tools/: Cargo.toml
crates/rusta-ui/: Cargo.toml
crates/rusta/model/: Cargo.toml  README.md
crates/rusta/model/examples/: text_generation.rs
crates/rusta/model/src/: cache.rs  data.rs  inference.rs  lib.rs  model.rs  training.rs
crates/rusta/model/src/data/: mod.rs
crates/rusta/model/src/inference/: mod.rs
crates/rusta/model/src/model/: mod.rs
crates/rusta/model/src/model/components/: mod.rs
crates/rusta/model/src/model/loader/: mod.rs  safetensors.rs
crates/rusta/model/src/model/qwen2/: attention.rs  mod.rs  model.rs
crates/rusta/model/src/train/: mod.rs
crates/server/: Cargo.toml
crates/test-utils/: Cargo.toml
crates/tool-cargo/: Cargo.toml
crates/tool-ra/: Cargo.toml
crates/tools/: Cargo.toml
crates/trace/: Cargo.toml
crates/traceserver/: Cargo.toml  README.md
crates/traceserver/examples/: sample_trace.jsonl
crates/traceserver/src/: lib.rs  main.rs
crates/training-core/: Cargo.toml
crates/training-ops/: Cargo.toml
crates/training-ops/src/: lib.rs
crates/trainingcore/: Cargo.toml
crates/vscode-ext/: package.json  tsconfig.json
crates/xtask/: Cargo.toml
data/: README.md
data/compiler_triplets/: README.md
data/fixtures/: README.md
data/licenses/: README.md
data/schema/: golden-trace.json
data/schemas/: README.md
datasets/ledger/: example.yml
docs/: ARCHITECTURE.md  CONTINUOUS.md  ENGINEERING_SPEC_UNIFIED.md  HUMOR_LMAO.md  REINFORCEMENT LEARNING.md  RUSTAv2.md  TRAINING_PLAN.md  TRAINING_PLAN_V3_2.md  identity.md  more notes.md  notes.md
docs/ADRs/: README.md
docs/RFCs/: README.md
docs/api/: README.md
docs/dev/: CONTRIBUTING.md
docs/spec/: README.md
schemas/: action_block.schema.json  diagcase.schema.json  docspan.schema.json  entry.schema.json  graphsnap.schema.json  observation.schema.json  patch_bundle.schema.json  qa.schema.json  triplet.schema.json
scripts/: README.md  merge_safetensors.py
tests/integration/: README.md
tests/regression/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+60 files in other folders)
