[workspace]
members = [
    "crates/rusta-kits",
    "crates/rusta-brain/byte-lm",
    "crates/rusta-brain/heads-action",
    "crates/rusta-brain/heads-confidence",
    "crates/rusta-brain/io-bytes",
    "crates/rusta-brain/loop-core",
    "crates/rusta-capkit",
    "crates/rusta-devlog",
    "crates/rusta-provenance",
    "crates/rusta-datasets",
    "crates/rusta-eval",
    "crates/rusta-ui",
    "crates/rusta-cli",
    "crates/rusta-senses",                           # the facade/high-level API crate
    "crates/rusta-senses/crates/sense-core",
    "crates/rusta-senses/crates/sense-detector",
    "crates/rusta-senses/crates/sense-adapters/text",
    "crates/rusta-senses/crates/sense-adapters/audio",
    "crates/rusta-senses/crates/sense-adapters/vision",
    "crates/rusta-senses/crates/sense-adapters/binary",
    "crates/rusta-senses/crates/sense-cli",
    "crates/xtask",
]

resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Huy duchuytran12341@gmail.com"]

[workspace.dependencies]
anyhow = "1.0.99"
thiserror = "2.0.16"
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ndarray = "0.16.1"