[workspace]
members = [
    "crates/rusta-kits",
    "crates/rusta-brain/byte-lm",
    "crates/rusta-brain/heads-action",
    "crates/rusta-brain/heads-confidence",
    "crates/rusta-brain/io-bytes",
    "crates/rusta-brain/loop-core",
    "crates/rusta-capkit",
    "crates/rusta-devlog",
    "crates/rusta-provenance",
    "crates/rusta-datasets",
    "crates/rusta-eval",
    "crates/rusta-ui",
    "crates/rusta-cli",

    # TODO: rusta-senses crates not yet created
    # "crates/rusta-senses",
    # "crates/rusta-senses/crates/sense-core",
    # "crates/rusta-senses/crates/sense-detector",
    # "crates/rusta-senses/crates/sense-decoder",
    # "crates/rusta-senses/crates/sense-transforms",
    # "crates/rusta-senses/crates/sense-flow",
    # "crates/rusta-senses/crates/sense-adapters/text",
    # "crates/rusta-senses/crates/sense-adapters/audio",
    # "crates/rusta-senses/crates/sense-adapters/vision",
    # "crates/rusta-senses/crates/sense-adapters/binary",
    # "crates/rusta-senses/crates/sense-cli",
    # "crates/rusta-senses/crates/sense-bench",
    # "crates/rusta-senses/crates/sense-goldenkit",
    # "crates/rusta-senses/crates/sense-metrics",
    # "crates/rusta-senses/crates/sense-ffi",
    # "crates/rusta-senses/crates/sense-wasm",

    "crates/xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.89"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Huy <duchuytran12341@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0.99"
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
blake3 = "1.8.2"
bitflags = "2.9.2"
crossbeam-channel = "0.5.15"
clap = { version = "4.5.46", features = ["derive"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wit-bindgen = "0.45.0"
cbindgen = "0.29.0"
bindgen = "0.72.0"
criterion = "0.7.0"

