[package]
name = "memory"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
redb.workspace = true
protocol = { path = "../protocol" }

[features]
sqlite = ["rusqlite"]
redb = ["redb"]
default = ["sqlite"]
