[package]
name = "traceserver"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "traceserver"
path = "src/lib.rs"

[[bin]]
name = "traceserver-bin"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
