[package]
name = "ai-rust-programmer-training-ops"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
