[package]
name = "byte-lm"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Burn deep learning framework
burn = { version = "0.18.0", features = ["train", "std"] }
burn-tensor = "0.18.0"

# Safetensors for weight loading
safetensors = "0.4"