[package]
name = "rusta-model"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Burn deep learning framework
burn = { version = "0.19.0", features = ["train", "std", "cuda"] }
burn-import = { version = "0.19.0", features = ["pytorch"] }
burn-cuda = { version = "0.19.0" }

# For converting PyTorch/safetensors weights
safetensors = "0.4"

# Tokenizer
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }