
            [package]
            name = "rusta-sense"
            version = "0.0.0"
            edition = "2024"
            publish = false
            license = "MIT OR Apache-2.0"
            description = "public facade API (skeleton)"

            [dependencies]
            anyhow = "1.0.99"
thiserror = "2.0.16"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
            sense-core = { path = "../sense-core" }
            sense-detector = { path = "../sense-detector" }
            sense-decoder = { path = "../sense-decoder" }
            sense-transforms = { path = "../sense-transforms" }
            sense-flow = { path = "../sense-flow" }
            sense-adapters-text = { path = "../sense-adapters/text" }
            sense-adapters-audio = { path = "../sense-adapters/audio" }
            sense-adapters-vision = { path = "../sense-adapters/vision" }
            sense-adapters-binary = { path = "../sense-adapters/binary" }
