
            [package]
            name = "sense-cli"
            version = "0.0.0"
            edition = "2024"
            publish = false
            license = "MIT OR Apache-2.0"
            description = "CLI (skeleton)"

            [dependencies]
            anyhow = "1.0.99"
tracing = "0.1.41"
clap = { version = "4.5.46", features = ["derive"] }
            rusta-sense = { path = "../rusta-sense" }
