[package]
name = "sense-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
# Default to std; other crates can opt into `alloc`/`no_std` builds.
default = ["std"]
std = []
alloc = []
serde = ["dep:serde"]
ffi = []
no_agent_leaks = []

[dependencies]
thiserror.workspace = true
bitflags.workspace = true
blake3.workspace = true
serde.workspace = true


[dev-dependencies]
