
            [package]
            name = "sense-detector"
            version = "0.0.0"
            edition = "2024"
            publish = false
            license = "MIT OR Apache-2.0"
            description = "detector (skeleton)"

            [dependencies]
            anyhow = "1.0.99"
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
            sense-core = { path = "../sense-core" }
