
            [package]
            name = "sense-goldenkit"
            version = "0.0.0"
            edition = "2024"
            publish = false
            license = "MIT OR Apache-2.0"
            description = "golden fixtures + conformance (skeleton)"

            [dependencies]
            anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
            rusta-sense = { path = "../rusta-sense" }
