
            [package]
            name = "sense-metrics"
            version = "0.0.0"
            edition = "2024"
            publish = false
            license = "MIT OR Apache-2.0"
            description = "telemetry sinks (skeleton)"

            [dependencies]
            tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
