
            [package]
            name = "sense-transforms"
            version = "0.0.0"
            edition = "2024"
            publish = false
            license = "MIT OR Apache-2.0"
            description = "transforms (skeleton)"

            [dependencies]
            anyhow = "1.0.99"
thiserror = "2.0.16"
tracing = "0.1.41"
            sense-core = { path = "../sense-core" }
