[package]
name = "rusta-ingest-net"
version = "0.0.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Network sources (HTTP, Socket)"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
