
            [package]
            name = "sense-adapters-audio"
            version = "0.0.0"
            edition = "2024"
            publish = false
            license = "MIT OR Apache-2.0"
            description = "audio adapter (skeleton)"

            [dependencies]
            anyhow = "1.0.99"
thiserror = "2.0.16"
tracing = "0.1.41"
            sense-core = { path = "../../sense-core" }
            sense-transforms = { path = "../../sense-transforms" }
