[package]
name = "sense-adapter-binary"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "RawByteAdapter (normalize bytes → proj)"
repository = "https://example.com/sozna-sense"

[lib]
name = "sense_adapter_binary"
path = "src/lib.rs"

[dependencies]
sense-core = { path = "../../sense-core" }
ndarray = { workspace = true }
anyhow = { workspace = true }
